# DTE-3609-Virtual-Reality-Graphics-and-Animation

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: Billboard.h  Camera.hpp  Character.hpp  GLErrorHandler.h  GameManager.hpp  Input.hpp  Landscape.hpp  Minimap.hpp  Obstacle.h  Plane.hpp  Projection.h  SceneObject.hpp  ScoreText.hpp  Shader.h  Skybox.h  Snow.hpp  Text.hpp  Texture.h  Utils.hpp  VertexArray.h  VertexBufferLayout.h
resources/shaders/: Billboard_fragment.shader  Billboard_vertex.shader  Character_fragment.shader  Character_vertex.shader  Fragment.shader  Minimap_fragment.shader  Minimap_vertex.shader  Obstacle_fragment.shader  Obstacle_vertex.shader  Plane_fragment.shader  Plane_vertex.shader  Skybox_vertex.shader  Vertex.shader
src/: Billboard.cpp  Camera.cpp  Character.cpp  GLErrorHandler.cpp  GameManager.cpp  IndexBuffer.cpp  Landscape.cpp  Minimap.cpp  Obstacle.cpp  Plane.cpp  SceneObject.cpp  ScoreText.cpp  Shader.cpp  Skybox.cpp  Snow.cpp  Text.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
